--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
 .header-wrapper{
   height: 100vh;
   width: 100vw;
-  background: linear-gradient(-45deg, #5e0878, #085078, #4ca59b, #1fa194);
+  background: linear-gradient(-45deg, #5e0878, #085078, #1fa194);
   background-size: 400% 400%;
   display: flex;
   flex-direction: column;
